--- a/sprs.ipynb
+++ b/sprs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,18 +1482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_10916\\3859653030.py:14: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
+      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_15496\\3859653030.py:14: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
       "  resized=pic.resize((width,height),Image.ANTIALIAS)\n",
-      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_10916\\2693379720.py:12: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
+      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_15496\\2693379720.py:12: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
       "  resized1=pic1.resize((width1,height1),Image.ANTIALIAS)\n",
-      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_10916\\2083568408.py:65: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
+      "C:\\Users\\VED PATEL\\AppData\\Local\\Temp\\ipykernel_15496\\2083568408.py:65: DeprecationWarning: ANTIALIAS is deprecated and will be removed in Pillow 10 (2023-07-01). Use LANCZOS or Resampling.LANCZOS instead.\n",
       "  resized_image= image.resize((width,height), Image.ANTIALIAS)\n"
      ]
     }
@@ -1536,44 +1536,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
+    "# import sqlite3\n",
     "\n",
-    "# Connect to the SQLite database (or create it if it doesn't exist)\n",
-    "conn = sqlite3.connect('project.db')\n",
-    "cursor = conn.cursor()\n",
+    "# # Connect to the SQLite database (or create it if it doesn't exist)\n",
+    "# conn = sqlite3.connect('project.db')\n",
+    "# cursor = conn.cursor()\n",
     "\n",
-    "# Create a table to store images (if not already created)\n",
+    "# # Create a table to store images (if not already created)\n",
+    "# # cursor.execute('''\n",
+    "# #     CREATE TABLE IF NOT EXISTS images (\n",
+    "# #         id INTEGER PRIMARY KEY,\n",
+    "# #         image BLOB\n",
+    "# #     )\n",
+    "# # ''')\n",
+    "\n",
+    "# # Read the image file\n",
+    "# with open('images/bhavy.jpeg', 'rb') as file:\n",
+    "#     image_data = file.read()\n",
+    "\n",
+    "# # Insert the image data into the table\n",
     "# cursor.execute('''\n",
-    "#     CREATE TABLE IF NOT EXISTS images (\n",
-    "#         id INTEGER PRIMARY KEY,\n",
-    "#         image BLOB\n",
-    "#     )\n",
-    "# ''')\n",
+    "#         INSERT INTO student_image (rollnumber, image) \n",
+    "#         VALUES (?, ?)\n",
+    "#     ''', ('21BCE242', image_data))\n",
     "\n",
-    "# Read the image file\n",
-    "with open('images/sanjay_sir.jpg', 'rb') as file:\n",
-    "    image_data = file.read()\n",
-    "\n",
-    "# Insert the image data into the table\n",
-    "cursor.execute('''\n",
-    "        INSERT INTO admin_image (username, image) \n",
-    "        VALUES (?, ?)\n",
-    "    ''', ('admin3', image_data))\n",
-    "\n",
-    "# Commit the transaction and close the connection\n",
-    "conn.commit()\n",
-    "conn.close()\n",
-    "\n",
-    "\n",
-    "# conn=sqlite3.connect(\"project.db\")\n",
-    "# conn.execute(\"INSERT INTO FACULTY_DETAILS(USERNAME,NAME,BRANCH,CITY) VALUES ('admin1', 'ADMIN 1', 'CSE', 'Ahmeadbad')\")\n",
-    "# conn.execute(\"INSERT INTO FACULTY_DETAILS(USERNAME,NAME,BRANCH,CITY) VALUES ('admin2', 'ADMIN 2', 'CSE', 'Vadodara')\")\n",
+    "# # Commit the transaction and close the connection\n",
     "# conn.commit()\n",
-    "# conn.close()"
+    "# conn.close()\n",
+    "\n",
+    "\n",
+    "# # conn=sqlite3.connect(\"project.db\")\n",
+    "# # conn.execute(\"INSERT INTO FACULTY_DETAILS(USERNAME,NAME,BRANCH,CITY) VALUES ('admin1', 'ADMIN 1', 'CSE', 'Ahmeadbad')\")\n",
+    "# # conn.execute(\"INSERT INTO FACULTY_DETAILS(USERNAME,NAME,BRANCH,CITY) VALUES ('admin2', 'ADMIN 2', 'CSE', 'Vadodara')\")\n",
+    "# # conn.commit()\n",
+    "# # conn.close()"
    ]
   },
   {
